added and edited github rpository and netlify link

--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
       >
       🤍 Open-sourced on
       <a
-        href="https://github.com/kiiru-sn/My-Weather-App"
+        href="https://github.com/kiiru-sn/My-World-Clock/tree/main"
         class="gitHub"
         target="_blank"
         >GitHub</a
       >
       and hosted on
       <a
-        href="https://kiirusweatherapp.netlify.app/"
+        href="https://kiirusworldclock.netlify.app/"
         class="netlify"
         target="_blank"
         >Netlify</a
