added html for different cities skeleton

--- a/index.html
+++ b/index.html
@@ -25,6 +25,25 @@
   <body>
     <div class="container">
       <h1>World Clock</h1>
+      <select name="" id="">
+        <option value="">Select a city...</option>
+        <option value="">London</option>
+        <option value="">New York</option>
+        <option value="">Aukland</option>
+      </select>
+
+      <div class="city">
+        <h2>Los Angeles</h2>
+        <div class="date">August 26th, 1992</div>
+        <div class="time">15:30:39</div>
+      </div>
+      <br />
+      <div class="city">
+        <h2>Sydney</h2>
+        <div class="date">August 26th, 1992</div>
+        <div class="time">15:30:39</div>
+      </div>
+      <br />
       <div id="tokyo"></div>
       <br />
       <div id="today"></div>
