updated netlify link and removed previous javascript

--- a/index.html
+++ b/index.html
@@ -51,13 +51,6 @@
       <div id="tomorrow"></div>
       <br />
       <div id="tenYearsFromNow"></div>
-      <br />
-      <div id="local"></div>
-      <br />
-      <div id="honolulu"></div>
-      <br />
-      <div id="parisTen"></div>
-      <br />
     </div>
     <footer class="codedBy">
       ミ☆ Coded by
@@ -76,7 +69,7 @@
       >
       and hosted on
       <a
-        href="https://kiirusworldclock.netlify.app/"
+        href="https://kiirusworldclock.netlify.app"
         class="netlify"
         target="_blank"
         >Netlify</a
