--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       >
       and hosted on
       <a
-        href="https://kiirusworldclock.netlify.app"
+        href="https://kiirusworldclock.netlify.app/"
         class="netlify"
         target="_blank"
         >Netlify</a
