edited css for each individual city

--- a/index.html
+++ b/index.html
@@ -33,24 +33,20 @@
       </select>
 
       <div class="city">
-        <h2>Los Angeles</h2>
-        <div class="date">August 26th, 1992</div>
-        <div class="time">15:30:39</div>
+        <div>
+          <h2>San Diego</h2>
+          <div class="date">August 26th, 1992</div>
+        </div>
+        <div class="time">15:30:39 <small>AM</small></div>
       </div>
-      <br />
+
       <div class="city">
-        <h2>Sydney</h2>
-        <div class="date">August 26th, 1992</div>
-        <div class="time">15:30:39</div>
+        <div>
+          <h2>Stockholm</h2>
+          <div class="date">August 26th, 1992</div>
+        </div>
+        <div class="time">15:30:39 <small>AM</small></div>
       </div>
-      <br />
-      <div id="tokyo"></div>
-      <br />
-      <div id="today"></div>
-      <br />
-      <div id="tomorrow"></div>
-      <br />
-      <div id="tenYearsFromNow"></div>
     </div>
     <footer class="codedBy">
       ミ☆ Coded by
