added a new location to html

--- a/index.html
+++ b/index.html
@@ -43,11 +43,20 @@
       <div class="city">
         <div>
           <h2>Stockholm</h2>
-          <div class="date">August 26th, 1992</div>
+          <div class="date">July 4th, 2015</div>
+        </div>
+        <div class="time">15:30:39 <small>AM</small></div>
+      </div>
+
+      <div class="city">
+        <div>
+          <h2>Dublin</h2>
+          <div class="date">November 19th, 2020</div>
         </div>
         <div class="time">15:30:39 <small>AM</small></div>
       </div>
     </div>
+
     <footer class="codedBy">
       ミ☆ Coded by
       <a
