added accurate times and timezones to locations on html

--- a/index.html
+++ b/index.html
@@ -32,28 +32,28 @@
         <option value="">Aukland</option>
       </select>
 
-      <div class="city">
+      <div class="city" id="san-diego">
         <div>
           <h2>San Diego</h2>
-          <div class="date">August 26th, 1992</div>
+          <div class="date"></div>
         </div>
-        <div class="time">15:30:39 <small>AM</small></div>
+        <div class="time"></div>
       </div>
 
-      <div class="city">
+      <div class="city" id="stockholm">
         <div>
           <h2>Stockholm</h2>
-          <div class="date">July 4th, 2015</div>
+          <div class="date"></div>
         </div>
-        <div class="time">15:30:39 <small>AM</small></div>
+        <div class="time"></div>
       </div>
 
-      <div class="city">
+      <div class="city" id="dublin">
         <div>
           <h2>Dublin</h2>
-          <div class="date">November 19th, 2020</div>
+          <div class="date"></div>
         </div>
-        <div class="time">15:30:39 <small>AM</small></div>
+        <div class="time"></div>
       </div>
     </div>
 
