added functionality for the select

--- a/index.html
+++ b/index.html
@@ -25,35 +25,37 @@
   <body>
     <div class="container">
       <h1>World Clock</h1>
-      <select name="" id="">
+
+      <select name="" id="city">
         <option value="">Select a city...</option>
-        <option value="">London</option>
-        <option value="">New York</option>
-        <option value="">Aukland</option>
+        <option value="Europe/London">London</option>
+        <option value="America/New_York">New York</option>
+        <option value="Pacific/Auckland">Auckland</option>
       </select>
-
-      <div class="city" id="san-diego">
-        <div>
-          <h2>San Diego</h2>
-          <div class="date"></div>
+      <div id="cities">
+        <div class="city" id="san-diego">
+          <div>
+            <h2>San Diego</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
-      </div>
 
-      <div class="city" id="stockholm">
-        <div>
-          <h2>Stockholm</h2>
-          <div class="date"></div>
+        <div class="city" id="stockholm">
+          <div>
+            <h2>Stockholm</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
-      </div>
 
-      <div class="city" id="dublin">
-        <div>
-          <h2>Dublin</h2>
-          <div class="date"></div>
+        <div class="city" id="dublin">
+          <div>
+            <h2>Dublin</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
       </div>
     </div>
 
