--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
       <select name="" id="city">
         <option value="">Select a city...</option>
+        <option value="Asia/Tokyo">Tokyo</option>
+        <option value="Asia/Seoul">Seoul</option>
         <option value="Europe/London">London</option>
         <option value="America/New_York">New York</option>
         <option value="Pacific/Auckland">Auckland</option>
