added current location to selection

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
       <select name="" id="city">
         <option value="">Select a city...</option>
+        <option value="current">My Time Zone</option>
         <option value="Asia/Tokyo">Tokyo</option>
         <option value="Asia/Seoul">Seoul</option>
         <option value="Europe/London">London</option>
